# kill

./: .envrc  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  run.sh
.github/workflows/: cd.yml
src/: games.rs  main.rs  scripter.rs  state.rs  utils.rs
src/games/: citty_cat.rs  joined_together.rs  lines.rs  list.rs  meta.rs  test01.rs  test02.rs  tutorial.rs
src/scripter/: check.rs  run.rs
src/state/: exit.rs  game.rs  intro.rs  menuselect.rs  tutorial.rs
src/utils/: file.rs  theme.rs  user.rs
