[package]
name = "kill-rs"
version = "0.1.0"
edition = "2021"
description = "Keep. It. Linux. Loser."

authors = ["ateschan <addisonteschan@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = "0.20"
cursive-multiplex = "0.6.0"
rand = "0.8.5"
